learn/envoy-ext-proc/scaffolding/envoy.yaml
# Envoy configuration for ext-proc learning project
#
# TODO: Task 5 - Complete this configuration
#
# This config should:
# 1. Listen on port 8080 for HTTP requests
# 2. Send request headers to your ext-proc server on port 50051
# 3. Route requests to httpbin.org as the upstream
#
# Key sections to complete:
# - http_filters: Add ext_proc filter before router
# - clusters: Add ext_proc_cluster for your gRPC server

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO

                # TODO: Add ext_proc filter here
                #
                # http_filters:
                #   - name: envoy.filters.http.ext_proc
                #     typed_config:
                #       "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                #       grpc_service:
                #         envoy_grpc:
                #           cluster_name: ext_proc_cluster
                #       processing_mode:
                #         request_header_mode: SEND
                #         response_header_mode: SKIP
                #         request_body_mode: NONE
                #         response_body_mode: NONE
                #   - name: envoy.filters.http.router
                #     typed_config:
                #       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                # Placeholder - just router, no ext_proc
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: upstream_cluster }

  clusters:
    # TODO: Add ext_proc_cluster
    #
    # - name: ext_proc_cluster
    #   type: STATIC
    #   lb_policy: ROUND_ROBIN
    #   typed_extension_protocol_options:
    #     envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #       "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #       explicit_http_config:
    #         http2_protocol_options: {}
    #   load_assignment:
    #     cluster_name: ext_proc_cluster
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   # Use host.docker.internal to reach the host from Docker
    #                   address: host.docker.internal
    #                   port_value: 50051

    # Upstream cluster (httpbin.org for testing)
    - name: upstream_cluster
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org
